--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -51,7 +51,7 @@
 <p><span class="badge badge-light">Toronto, ON</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/idpeducationpty/jobs/privacy-specialist-dfEU9s9Ker6ARKaKiznY58'>Privacy Specialist #1136 job at IDP Education Ltd in Melbourne City, Victoria, Australia, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/idpeducationpty/jobs/privacy-specialist-dfEU9s9Ker6ARKaKiznY58'>Privacy Specialist #1136 job at IDP Education Ltd in Melbourne City, Victoria, Australia, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Melbourne Australia Melbourne Australia Melbourne</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -63,7 +63,7 @@
 <p><span class="badge badge-light">California Albany, NY  Atlanta, GA  Austin, TX  Baltimore, MD  Bellevue, WA</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://duckduckgo.applytojob.com/apply/YIhWQzF8C8/Senior-Privacy-Engineer-Remote'>Senior Privacy Engineer (Remote) - DuckDuckGo - Career Page</a></h5> 
+<h5><a href='http://duckduckgo.applytojob.com/apply/YIhWQzF8C8/Senior-Privacy-Engineer-Remote'>Senior Privacy Engineer (Remote) - DuckDuckGo - Career Page</a></h5> 
 <p><span class="badge badge-light">Canada Italy</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -76,7 +76,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n5U38Mwr'>ServiceNow Careers - Privacy Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n5U38Mwr'>ServiceNow Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
@@ -100,7 +100,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/goldstonepartners/743999697192565-privacy-analyst'>Goldstone Partners, Inc. Privacy Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/goldstonepartners/743999697192565-privacy-analyst'>Goldstone Partners, Inc. Privacy Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -112,7 +112,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-07</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Verisk/743999696786128-data-security-and-privacy-specialist'>Verisk Data Security and Privacy Specialist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Verisk/743999696786128-data-security-and-privacy-specialist'>Verisk Data Security and Privacy Specialist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -249,7 +249,7 @@ and?...</p>
 <p>4 days ago ... Sr. Differential Privacy Research Engineer, Mozilla Corporation, Mountain View, 
 CA &amp; Sugar Land, TX: perform research into data obfuscation methods for?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/nRLC42jq0b/Privacy-And-Public-Policy-Associate'>Privacy and Public Policy Associate - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<h5><a href='http://profacebook.applytojob.com/apply/nRLC42jq0b/Privacy-And-Public-Policy-Associate'>Privacy and Public Policy Associate - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
@@ -266,7 +266,7 @@ CA &amp; Sugar Land, TX: perform research into data obfuscation methods for?...<
 <p>3 days ago ... Collaborate with senior Privacy team members to review and mitigate privacy 
 and data protection risks in connection with Everlaw's products, services, and?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/softrams/4a85d547-50ee-4c60-8096-1ad038ec006b'>Softrams - Security/Privacy Assurance Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/softrams/4a85d547-50ee-4c60-8096-1ad038ec006b'>Softrams - Security/Privacy Assurance Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-04</p>
 <hr/>
@@ -310,11 +310,11 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<h5><a href='https://vodafone.referrals.selectminds.com/jobs/privacy-operations-specialist-57814'>Privacy Operations Specialist - Vodafone Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vodafone.referrals.selectminds.com/jobs/privacy-operations-specialist-57814'>Privacy Operations Specialist - Vodafone Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
-<h5><a href='https://careers.newschool.edu/postings/17499'>The New School Job Site | Privacy and Security Compliance Specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.newschool.edu/postings/17499'>The New School Job Site | Privacy and Security Compliance Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-06-26</p>
 <hr/>
@@ -365,7 +365,7 @@ what we are and it's what we do. It's what makes us different. To create the bes
 technologies like edge computing, artificial intelligence, blockchain, machine 
 learning,?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://primetherapeutics.wd1.myworkdayjobs.com/en-US/PrimeTherapeuticsCareers/job/Bloomington-MN/Associate-Privacy-Analyst_R-03680-1?source=DataPrivacyCareers.com'>Associate Privacy Analyst</a></h5> 
+<h5><a href='https://primetherapeutics.wd1.myworkdayjobs.com/en-US/PrimeTherapeuticsCareers/job/Bloomington-MN/Associate-Privacy-Analyst_R-03680-1?source=DataPrivacyCareers.com'>Associate Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... The Associate Privacy Analyst provides administrative and analytical support to 
 Prime's privacy program, working closely with privacy team members as well as?...</p>
@@ -405,7 +405,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/etsy/b2605ca0-523f-47e9-a66f-f6b8a3d0d342'>Etsy - Senior Privacy Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/etsy/b2605ca0-523f-47e9-a66f-f6b8a3d0d342'>Etsy - Senior Privacy Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
